# network-coverage-checker

./: README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/docs/: development.md  testing.md
backend/src/api/: main.py  urls.py  views.py
backend/src/api/serializers/: __init__.py
backend/src/api/serializers/coverage/: __init__.py  requests.py  responses.py
backend/src/data/: coverage_loader.py
backend/src/models/: coverage.py  geocoding.py  records.py
backend/src/services/: coordinate_service.py  coverage_service.py  geocoding_service.py
backend/tests/int/: test_api_integration.py
backend/tests/unit/: test_coordinate_service.py  test_coverage_loader.py  test_coverage_service.py  test_geocoding_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: app.component.css  app.component.html  app.component.ts
frontend/src/app/components/network-results/: network-results.component.css  network-results.component.html  network-results.component.spec.ts  network-results.component.ts
frontend/src/app/components/network-search/: network-search.component.css  network-search.component.html  network-search.component.ts
