[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI service for the network coverage checker"
authors = ["Jonathan Espiard <jonathan.espiard@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = ">=0.116.1,<0.117.0"
pydantic = ">=2.11.7,<3.0.0"
uvicorn = ">=0.35.0,<0.36.0"
httpx = "^0.28.1"
pyproj = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
black = "^25.1.0"
pre-commit = "^4.3.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
